--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "file-saver": "^2.0.4",
     "ics.js": "^0.2.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "aos": "^2.3.4"
   }
 }
